--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -391,6 +391,77 @@
         </div>
     </div>
 
+    <!-- Auth Modal (Login/Signup) -->
+    <div class="modal" id="authModal">
+        <div class="modal-overlay"></div>
+        <div class="modal-content auth-modal-content">
+            <div class="auth-tabs">
+                <button class="auth-tab active" data-auth-tab="login">로그인</button>
+                <button class="auth-tab" data-auth-tab="signup">회원가입</button>
+            </div>
+
+            <!-- Login Form -->
+            <form class="auth-form active" id="loginForm">
+                <div class="form-group">
+                    <label for="loginEmail">이메일</label>
+                    <div class="input-wrapper">
+                        <i class="ph ph-envelope"></i>
+                        <input type="email" id="loginEmail" placeholder="이메일 주소" required>
+                    </div>
+                </div>
+                <div class="form-group">
+                    <label for="loginPassword">비밀번호</label>
+                    <div class="input-wrapper">
+                        <i class="ph ph-lock"></i>
+                        <input type="password" id="loginPassword" placeholder="비밀번호" required>
+                    </div>
+                </div>
+                <button type="submit" class="btn btn-primary btn-full">
+                    <i class="ph ph-sign-in"></i>
+                    <span>로그인</span>
+                </button>
+            </form>
+
+            <!-- Signup Form -->
+            <form class="auth-form" id="signupForm">
+                <div class="form-group">
+                    <label for="signupEmail">이메일</label>
+                    <div class="input-wrapper">
+                        <i class="ph ph-envelope"></i>
+                        <input type="email" id="signupEmail" placeholder="이메일 주소" required>
+                    </div>
+                </div>
+                <div class="form-group">
+                    <label for="signupUsername">사용자명</label>
+                    <div class="input-wrapper">
+                        <i class="ph ph-at"></i>
+                        <input type="text" id="signupUsername" placeholder="사용자명 (영문, 숫자, _)" required>
+                    </div>
+                    <span class="input-hint">3-20자, 영문/숫자/밑줄만 사용 가능</span>
+                </div>
+                <div class="form-group">
+                    <label for="signupPassword">비밀번호</label>
+                    <div class="input-wrapper">
+                        <i class="ph ph-lock"></i>
+                        <input type="password" id="signupPassword" placeholder="비밀번호" required>
+                    </div>
+                    <span class="input-hint">8자 이상, 대소문자 및 숫자 포함</span>
+                </div>
+                <div class="form-group">
+                    <label for="signupPasswordConfirm">비밀번호 확인</label>
+                    <div class="input-wrapper">
+                        <i class="ph ph-lock"></i>
+                        <input type="password" id="signupPasswordConfirm" placeholder="비밀번호 확인" required>
+                    </div>
+                </div>
+                <button type="submit" class="btn btn-primary btn-full">
+                    <i class="ph ph-user-plus"></i>
+                    <span>회원가입</span>
+                </button>
+            </form>
+        </div>
+    </div>
+
     <!-- Confirm Modal -->
     <div class="modal" id="confirmModal">
         <div class="modal-overlay" data-close-modal></div>
