--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -20,8 +20,121 @@
 </head>
 
 <body>
-    <!-- App Container -->
-    <div id="app" class="app-container">
+    <!-- Auth Page (Landing/Login Page for unauthenticated users) -->
+    <div id="authPage" class="auth-page">
+        <div class="auth-page-container">
+            <!-- Background decoration -->
+            <div class="auth-bg-decoration">
+                <div class="auth-bg-circle auth-bg-circle-1"></div>
+                <div class="auth-bg-circle auth-bg-circle-2"></div>
+                <div class="auth-bg-circle auth-bg-circle-3"></div>
+            </div>
+
+            <!-- Left side - Branding -->
+            <div class="auth-branding">
+                <div class="auth-branding-content">
+                    <div class="auth-logo">
+                        <div class="auth-logo-icon">
+                            <i class="ph-fill ph-bird"></i>
+                        </div>
+                        <h1 class="auth-logo-text">Platypus</h1>
+                    </div>
+                    <p class="auth-tagline">사진을 공유하고, 추억을 정리하세요</p>
+                    <div class="auth-features">
+                        <div class="auth-feature">
+                            <i class="ph-fill ph-images"></i>
+                            <span>사진 동기화 및 정리</span>
+                        </div>
+                        <div class="auth-feature">
+                            <i class="ph-fill ph-users"></i>
+                            <span>친구들과 사진 공유</span>
+                        </div>
+                        <div class="auth-feature">
+                            <i class="ph-fill ph-folders"></i>
+                            <span>그룹별 앨범 관리</span>
+                        </div>
+                        <div class="auth-feature">
+                            <i class="ph-fill ph-play-circle"></i>
+                            <span>슬라이드쇼 재생</span>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Right side - Auth Form -->
+            <div class="auth-form-section">
+                <div class="auth-form-card">
+                    <div class="auth-form-tabs">
+                        <button class="auth-form-tab active" data-auth-page-tab="login">로그인</button>
+                        <button class="auth-form-tab" data-auth-page-tab="signup">회원가입</button>
+                    </div>
+
+                    <!-- Login Form -->
+                    <form class="auth-page-form active" id="authPageLoginForm">
+                        <div class="auth-form-group">
+                            <label for="authLoginEmail">이메일</label>
+                            <div class="auth-input-wrapper">
+                                <i class="ph ph-envelope"></i>
+                                <input type="email" id="authLoginEmail" placeholder="이메일 주소를 입력하세요" required>
+                            </div>
+                        </div>
+                        <div class="auth-form-group">
+                            <label for="authLoginPassword">비밀번호</label>
+                            <div class="auth-input-wrapper">
+                                <i class="ph ph-lock"></i>
+                                <input type="password" id="authLoginPassword" placeholder="비밀번호를 입력하세요" required>
+                            </div>
+                        </div>
+                        <button type="submit" class="btn btn-primary btn-full auth-submit-btn">
+                            <i class="ph ph-sign-in"></i>
+                            <span>로그인</span>
+                        </button>
+                    </form>
+
+                    <!-- Signup Form -->
+                    <form class="auth-page-form" id="authPageSignupForm">
+                        <div class="auth-form-group">
+                            <label for="authSignupEmail">이메일</label>
+                            <div class="auth-input-wrapper">
+                                <i class="ph ph-envelope"></i>
+                                <input type="email" id="authSignupEmail" placeholder="이메일 주소를 입력하세요" required>
+                            </div>
+                        </div>
+                        <div class="auth-form-group">
+                            <label for="authSignupUsername">사용자명</label>
+                            <div class="auth-input-wrapper">
+                                <i class="ph ph-at"></i>
+                                <input type="text" id="authSignupUsername" placeholder="사용자명 (영문, 숫자, _)" required>
+                            </div>
+                            <span class="auth-input-hint">3-20자, 영문/숫자/밑줄만 사용 가능</span>
+                        </div>
+                        <div class="auth-form-group">
+                            <label for="authSignupPassword">비밀번호</label>
+                            <div class="auth-input-wrapper">
+                                <i class="ph ph-lock"></i>
+                                <input type="password" id="authSignupPassword" placeholder="비밀번호를 입력하세요" required>
+                            </div>
+                            <span class="auth-input-hint">8자 이상, 대소문자 및 숫자 포함</span>
+                        </div>
+                        <div class="auth-form-group">
+                            <label for="authSignupPasswordConfirm">비밀번호 확인</label>
+                            <div class="auth-input-wrapper">
+                                <i class="ph ph-lock"></i>
+                                <input type="password" id="authSignupPasswordConfirm" placeholder="비밀번호를 다시 입력하세요" required>
+                            </div>
+                        </div>
+                        <button type="submit" class="btn btn-primary btn-full auth-submit-btn">
+                            <i class="ph ph-user-plus"></i>
+                            <span>회원가입</span>
+                        </button>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- App Container (Hidden when not authenticated) -->
+    <div id="app" class="app-container" style="display: none;">
 
         <!-- Header -->
         <header class="header">
