--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -114,7 +114,7 @@
                                 <i class="ph ph-lock"></i>
                                 <input type="password" id="authSignupPassword" placeholder="비밀번호를 입력하세요" required>
                             </div>
-                            <span class="auth-input-hint">8자 이상, 숫자, 알파벳, 특수문자가 반드시 포함되어 있어야 합니다.</span>
+                            <span class="auth-input-hint">8자 이상, 숫자, 알파벳, 특수문자가 반드시 포함</span>
                         </div>
                         <div class="auth-form-group">
                             <label for="authSignupPasswordConfirm">비밀번호 확인</label>
