-회원탈퇴 기능 추가. public에서 삭제가 되지만, auth에서 삭제가 안되는듯. 탈퇴한 계정으로 다시 로그인이 됨.

--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -320,6 +320,10 @@
                             <i class="ph ph-sign-out"></i>
                             <span>로그아웃</span>
                         </button>
+                        <button class="btn btn-danger-outline btn-full" id="deleteAccountBtn">
+                            <i class="ph ph-user-minus"></i>
+                            <span>회원탈퇴</span>
+                        </button>
                     </div>
                 </div>
             </section>
