여러 텍스트 변경

--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -151,7 +151,7 @@
                     </button>
                     <button class="btn btn-primary" id="syncBtn">
                         <i class="ph ph-arrows-clockwise"></i>
-                        <span>사진 동기화</span>
+                        <span>사진 불러오기</span>
                     </button>
                 </div>
             </div>
@@ -395,7 +395,7 @@
             <div class="modal-header">
                 <h2>
                     <i class="ph ph-arrows-clockwise"></i>
-                    사진 동기화
+                    사진 불러오기
                 </h2>
                 <button class="modal-close" data-close-modal aria-label="닫기">
                     <i class="ph ph-x"></i>
@@ -407,11 +407,10 @@
 
                 <!-- Initial state: Select photos -->
                 <div id="syncInitialState">
-                    <p class="sync-description">갤러리에서 동기화할 사진을 선택하세요</p>
-                    <p class="sync-info" id="lastSyncInfo"></p>
+                    <p class="sync-description">갤러리로 불러올 사진을 선택하세요</p>
                     <button class="btn btn-primary btn-large" id="selectPhotosBtn">
                         <i class="ph ph-images"></i>
-                        <span>갤러리에서 사진 선택</span>
+                        <span>사진 파일 선택</span>
                     </button>
                 </div>
 
