동기화라는 단어를 더이상 사용하지 않음

--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -43,7 +43,7 @@
                     <div class="auth-features">
                         <div class="auth-feature">
                             <i class="ph-fill ph-images"></i>
-                            <span>사진 동기화 및 정리</span>
+                            <span>사진 불러오기 및 정리</span>
                         </div>
                         <div class="auth-feature">
                             <i class="ph-fill ph-users"></i>
@@ -279,7 +279,7 @@
                             </div>
                             <div class="detail-item">
                                 <i class="ph ph-arrows-clockwise"></i>
-                                <span id="lastSync">마지막 동기화: 오늘</span>
+                                <span id="lastSync">마지막 스캔: 오늘</span>
                             </div>
                         </div>
 
