- 웹에서 전체 사진을 볼때, 업로드 날짜 기준 오름,내림차순, 촬영 날짜 기준 오름, 내림차순 ->웹에서 필터링 기술이 필요하다 -> 테이블 컬럼 값중, 'data_taken'이 촬영 혹은 다운로드 날짜 및 시간, 'created_at'이 앞의 값과 별개로, 업로드 날짜 및 시간 -> 추가 완료

--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -232,6 +232,22 @@
                     </button>
                 </div>
 
+                <!-- Sort Options -->
+                <div class="sort-container">
+                    <div class="sort-label">
+                        <i class="ph ph-sort-ascending"></i>
+                        <span>정렬</span>
+                    </div>
+                    <select id="sortFieldSelect" class="sort-select">
+                        <option value="date_taken">촬영 시간</option>
+                        <option value="created_at">업로드 시간</option>
+                    </select>
+                    <select id="sortOrderSelect" class="sort-select">
+                        <option value="desc">최신순</option>
+                        <option value="asc">오래된순</option>
+                    </select>
+                </div>
+
                 <!-- Photo Gallery -->
                 <div class="gallery" id="gallery">
                     <!-- Photos will be dynamically rendered here -->
