웹의 이미지 상세 정보에 업로드 날짜(시간 제외) 추가

--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -370,6 +370,10 @@
                             <span id="photoDate">날짜: ---</span>
                         </div>
                         <div class="meta-item">
+                            <i class="ph ph-upload-simple"></i>
+                            <span id="photoUploadDate">업로드: ---</span>
+                        </div>
+                        <div class="meta-item">
                             <i class="ph ph-map-pin"></i>
                             <span id="photoLocation">위치: ---</span>
                         </div>
