-회원가입시 사용자명을 기반으로 ID 생성이 아닌, 랜덤 접미사 생상을 기반으로 고유 ID 생성 방식으로 변경

--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -103,10 +103,10 @@
                         <div class="auth-form-group">
                             <label for="authSignupUsername">사용자명</label>
                             <div class="auth-input-wrapper">
-                                <i class="ph ph-at"></i>
-                                <input type="text" id="authSignupUsername" placeholder="사용자명 (영문, 숫자, _)" required>
+                                <i class="ph ph-user"></i>
+                                <input type="text" id="authSignupUsername" placeholder="사용자명을 입력하세요" required>
                             </div>
-                            <span class="auth-input-hint">3-20자, 영문/숫자/밑줄만 사용 가능</span>
+                            <span class="auth-input-hint">3-20자, 한글/영문/숫자/밑줄 사용 가능 (ID는 자동 생성)</span>
                         </div>
                         <div class="auth-form-group">
                             <label for="authSignupPassword">비밀번호</label>
@@ -669,10 +669,10 @@
                 <div class="form-group">
                     <label for="signupUsername">사용자명</label>
                     <div class="input-wrapper">
-                        <i class="ph ph-at"></i>
-                        <input type="text" id="signupUsername" placeholder="사용자명 (영문, 숫자, _)" required>
+                        <i class="ph ph-user"></i>
+                        <input type="text" id="signupUsername" placeholder="사용자명을 입력하세요" required>
                     </div>
-                    <span class="input-hint">3-20자, 영문/숫자/밑줄만 사용 가능</span>
+                    <span class="input-hint">3-20자, 한글/영문/숫자/밑줄 사용 가능 (ID는 자동 생성)</span>
                 </div>
                 <div class="form-group">
                     <label for="signupPassword">비밀번호</label>
