--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -760,13 +760,28 @@
                     </div>
                     <span class="input-hint">3-20자, 영문/숫자/밑줄만 사용 가능</span>
                 </div>
-                <div class="form-group">
-                    <label for="editAvatarUrl">프로필 이미지 URL (선택)</label>
-                    <div class="input-wrapper">
-                        <i class="ph ph-image"></i>
-                        <input type="url" id="editAvatarUrl" placeholder="https://example.com/avatar.jpg">
+                <div class="form-group avatar-edit-group">
+                    <label>프로필 사진</label>
+                    <div class="avatar-edit-container">
+                        <div class="avatar-edit-preview" id="avatarEditPreview">
+                            <i class="ph-fill ph-user"></i>
+                        </div>
+                        <div class="avatar-edit-actions">
+                            <button type="button" class="btn btn-secondary btn-sm" id="avatarUploadBtn">
+                                <i class="ph ph-upload-simple"></i>
+                                <span>이미지 업로드</span>
+                            </button>
+                            <button type="button" class="btn btn-secondary btn-sm" id="avatarFromPhotosBtn">
+                                <i class="ph ph-images"></i>
+                                <span>내 사진에서 선택</span>
+                            </button>
+                            <button type="button" class="btn-text btn-sm" id="avatarResetBtn" style="display: none;">
+                                <i class="ph ph-arrow-counter-clockwise"></i>
+                                <span>기본 이미지로 변경</span>
+                            </button>
+                        </div>
                     </div>
-                    <span class="input-hint">외부 이미지 URL을 입력하세요</span>
+                    <input type="file" id="avatarFileInput" accept="image/*" style="display: none;">
                 </div>
                 <div class="modal-footer profile-edit-footer">
                     <button type="button" class="btn btn-secondary" data-close-modal>취소</button>
@@ -776,6 +791,28 @@
                     </button>
                 </div>
             </form>
+        </div>
+    </div>
+
+    <!-- Avatar Photo Picker Modal -->
+    <div class="modal" id="avatarPhotoPickerModal">
+        <div class="modal-overlay" data-close-modal></div>
+        <div class="modal-content avatar-picker-modal-content">
+            <div class="modal-header">
+                <h2>
+                    <i class="ph ph-image"></i>
+                    프로필 사진 선택
+                </h2>
+                <button class="modal-close" data-close-modal aria-label="닫기">
+                    <i class="ph ph-x"></i>
+                </button>
+            </div>
+            <div class="avatar-photo-grid" id="avatarPhotoGrid">
+                <div class="empty-state">
+                    <i class="ph ph-image"></i>
+                    <p>사진이 없습니다</p>
+                </div>
+            </div>
         </div>
     </div>
 
