--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -754,11 +754,11 @@
                 </div>
                 <div class="form-group">
                     <label for="editUserId">사용자 ID</label>
-                    <div class="input-wrapper">
+                    <div class="input-wrapper input-readonly">
                         <i class="ph ph-at"></i>
-                        <input type="text" id="editUserId" placeholder="사용자 ID (영문, 숫자, _)" required>
+                        <input type="text" id="editUserId" readonly>
                     </div>
-                    <span class="input-hint">3-20자, 영문/숫자/밑줄만 사용 가능</span>
+                    <span class="input-hint">사용자 ID는 변경할 수 없습니다</span>
                 </div>
                 <div class="form-group avatar-edit-group">
                     <label>프로필 사진</label>
