--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -845,6 +845,10 @@
                 <span class="nickname-char-count"><span id="nicknameCharCount">0</span>/20</span>
             </div>
             <p class="nickname-hint">빈 칸으로 두면 별명이 삭제됩니다</p>
+            <ul class="nickname-info">
+                <li>별명은 나만 볼 수 있습니다</li>
+                <li>언제든지 수정(삭제)할 수 있습니다</li>
+            </ul>
             <div class="confirm-actions">
                 <button class="btn btn-secondary" data-close-modal>취소</button>
                 <button class="btn btn-primary" id="nicknameSaveBtn">저장</button>
