--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -333,40 +333,47 @@
                         </div>
                     </div>
 
-                    <!-- Friends List -->
-                    <div class="friends-list-section">
-                        <h3 class="section-title">
-                            <i class="ph ph-users"></i>
-                            <span>친구 목록</span>
-                        </h3>
-                        <div class="friends-list" id="friendsList">
-                            <!-- Friends will be dynamically rendered here -->
+                    <!-- Friend Sub-Tabs -->
+                    <div class="friend-sub-tabs-container">
+                        <div class="friend-sub-tab-header">
+                            <nav class="friend-sub-tab-nav">
+                                <button class="friend-sub-tab-btn active" data-tab="friend-list">
+                                    <span>친구 목록</span>
+                                </button>
+                                <button class="friend-sub-tab-btn" data-tab="received-requests">
+                                    <span>받은 요청</span>
+                                    <span class="friend-sub-tab-badge" id="receivedRequestCount" style="display: none;"></span>
+                                </button>
+                                <button class="friend-sub-tab-btn" data-tab="sent-requests">
+                                    <span>보낸 요청</span>
+                                    <span class="friend-sub-tab-badge" id="sentRequestCount" style="display: none;"></span>
+                                </button>
+                            </nav>
                         </div>
-                    </div>
 
-                    <!-- Received Friend Requests (always visible) -->
-                    <div class="friends-list-section" id="receivedRequestsSection">
-                        <h3 class="section-title">
-                            <i class="ph ph-user-circle-check"></i>
-                            <span>받은 친구 요청</span>
-                            <span class="request-count-badge" id="receivedRequestCount"></span>
-                        </h3>
-                        <div class="request-list" id="receivedRequestsList">
+                        <div class="friend-sub-tab-content-area">
+                            <div class="friend-sub-tab-content active" id="friend-list">
+                                <div class="friends-list" id="friendsList">
+                                    <!-- Friends will be dynamically rendered here -->
+                                </div>
+                            </div>
+
+                            <div class="friend-sub-tab-content" id="received-requests">
+                                <div class="request-list" id="receivedRequestsList">
+                                </div>
+                            </div>
+
+                            <div class="friend-sub-tab-content" id="sent-requests">
+                                <div class="request-list" id="sentRequestsList">
+                                </div>
+                            </div>
                         </div>
-                    </div>
 
-                    <!-- Sent Friend Requests (always visible) -->
-                    <div class="friends-list-section" id="sentRequestsSection">
-                        <h3 class="section-title">
-                            <i class="ph ph-paper-plane-tilt"></i>
-                            <span>보낸 친구 요청</span>
-                            <span class="request-count-badge" id="sentRequestCount"></span>
-                            <button class="btn btn-primary btn-sm" id="sendFriendRequestBtn">
+                        <div class="friend-sub-tab-action-bar" id="friendSubTabActionBar">
+                            <button class="btn btn-primary btn-full" id="sendFriendRequestBtn">
                                 <i class="ph ph-user-plus"></i>
                                 <span>친구 요청 보내기</span>
                             </button>
-                        </h3>
-                        <div class="request-list" id="sentRequestsList">
                         </div>
                     </div>
 
@@ -852,6 +859,25 @@
             <div class="confirm-actions">
                 <button class="btn btn-secondary" data-close-modal>취소</button>
                 <button class="btn btn-primary" id="nicknameSaveBtn">저장</button>
+            </div>
+        </div>
+    </div>
+
+    <!-- Friend List Modal (Show More) -->
+    <div class="modal" id="friendListModal">
+        <div class="modal-overlay" data-close-modal></div>
+        <div class="modal-content friend-list-modal-content">
+            <div class="modal-header">
+                <h2>
+                    <i class="ph ph-users" id="friendListModalIcon"></i>
+                    <span id="friendListModalTitle">친구 목록</span>
+                </h2>
+                <button class="modal-close" data-close-modal aria-label="닫기">
+                    <i class="ph ph-x"></i>
+                </button>
+            </div>
+            <div class="friend-list-modal-body" id="friendListModalBody">
+                <!-- Items will be dynamically rendered here -->
             </div>
         </div>
     </div>
