친구 요청 거부 토글 추가

--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -333,6 +333,20 @@
                         </div>
                     </div>
 
+                    <!-- Account Settings -->
+                    <div class="account-settings">
+                        <div class="setting-item">
+                            <div class="setting-info">
+                                <span class="setting-label">친구 요청 거부</span>
+                                <span class="setting-description">활성화하면 다른 사용자가 나에게 친구 요청을 보낼 수 없습니다. 직접 요청을 보내야 합니다.</span>
+                            </div>
+                            <label class="toggle-switch">
+                                <input type="checkbox" id="blockFriendRequestsToggle">
+                                <span class="toggle-slider"></span>
+                            </label>
+                        </div>
+                    </div>
+
                     <!-- Friend Sub-Tabs -->
                     <div class="friend-sub-tabs-container">
                         <div class="friend-sub-tab-header">
