-계정 탭에 다운로드 잠금 토글 추가 : 해당 기능은 친구 탭에서 공유된 사진이 다른 친구들이 다운로드 할 수 없도록 설정하는 옵션이다. 기본값은 다운로드 잠금 상태.

--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -345,6 +345,17 @@
                                 <span class="toggle-slider"></span>
                             </label>
                         </div>
+                        <div class="setting-divider"></div>
+                        <div class="setting-item">
+                            <div class="setting-info">
+                                <span class="setting-label">다운로드 잠금</span>
+                                <span class="setting-description">활성화하면 친구가 내 사진을 다운로드할 수 없습니다.</span>
+                            </div>
+                            <label class="toggle-switch">
+                                <input type="checkbox" id="lockPhotoDownloadsToggle">
+                                <span class="toggle-slider"></span>
+                            </label>
+                        </div>
                     </div>
 
                     <!-- Friend Sub-Tabs -->
